--- a/diary/criando_blog.html
+++ b/diary/criando_blog.html
@@ -1,11 +1,12 @@
 <html>
     <head>
+        <title>Bruno.</title>
         <link rel="stylesheet" href="../css/style.css">
         <link rel="stylesheet" href="../css/grid/simple-grid.css">
     </head>
     <body>
         <div class="container">
-            <h3 class="blog-title"># Criando o blog</h3>
+            <h1>Criando o blog</h3>
             <p>29 de maio de 2021</p>
             <p>Sempre quis criar um blog, porém, nunca realmente tive a pachorra.</p>
             <p>Hoje comecei a fazê-lo e espero não desistir deste projeto.</p>
