--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <title>Bruno.</title>
         <link rel="stylesheet" href="css/grid/simple-grid.css">
         <link rel="stylesheet" href="css/style.css">
     </head>
@@ -15,31 +16,31 @@ ____
      '-.  \ "|\
         '.,,/'.,,mrf
             </pre>
-            <h1 class="blog-title"># Meu Mundo</h1>
-            <p>Welcome, welcome to City 17.</p>
+            <h1>Bruno.</h1>
+            <p>Olá e bem-vindo(a) ao meu blog. Eu geralmente espio o mundo do código-aberto, jogos, música, e falo sobre os meus dias aqui, basicamente como se fosse um diário.</p>
 
-            <h3 class="blog-subtitle">## Diário</h2>
+            <h2>Diário</h2>
             <p>
                 <a href="diary/criando_blog.html">29/05/2021 ‒ Criando o blog</a>
             </p>
             <p>
                 <a href="arquivo.html">Arquivados</a>
             </p>
-            <h3 class="blog-subtitle">## Lugares em que podes me encontrar</h3>
+            <h2>Lugares em que podes me encontrar</h2>
             <p>
-                <a href="">Twitch</a>
+                <!--<a href="">Twitch</a>
                 <br>
                 <a href="">Youtube</a>
+                <br>-->
+                <a href="https://open.spotify.com/user/77szv7ymtz8jt1ft0q8iw7qe7">Spotify</a>
                 <br>
-                <a href="">Spotify</a>
+                <a href="https://www.instagram.com/brunobits/">Instagram</a>
                 <br>
-                <a href="">Instagram</a>
+                <!--<a href="">Discord</a>
+                <br>-->
+                <a href="https://steamcommunity.com/id/brunobits/">Steam</a>
                 <br>
-                <a href="">Discord</a>
-                <br>
-                <a href="">Steam</a>
-                <br>
-                <a href="">Renegade X Forums</a>
+                <a href="https://renegade-x.com/profile/13556-bruni/">Renegade X Forums</a>
                 <br>
             </p>
         </div>
