--- a/arquivo.html
+++ b/arquivo.html
@@ -1,15 +1,16 @@
 <html>
     <head>
-        <link rel="stylesheet" href="css/style.css">
+        <title>Bruno.</title>
         <link rel="stylesheet" href="css/grid/simple-grid.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <div id="blog" class="container">
-            <h3 class="blog-title"># Arquivados</h3>
+        <div class="container">
+            <h1>Arquivados</h2>
             <p>
                 <a href="index.html">..</a>
             </p>
-            <h3 class="blog-subtitle">## 2021</h3>
+            <h2>2021</h2>
             <p>
                 <a href="diary/criando_blog.html">29/05/2021 ‒ Criando o blog</a>
             </p>
