--- a/arquivo.html
+++ b/arquivo.html
@@ -1,19 +1,18 @@
 <html>
     <head>
         <title>Bruno.</title>
-        <link rel="stylesheet" href="css/grid/simple-grid.css">
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <div class="container">
+        <section>
             <h1>Arquivados</h2>
-            <p>
-                <a href="index.html">..</a>
-            </p>
-            <h2>2021</h2>
-            <p>
-                <a href="diary/criando_blog.html">29/05/2021 ‒ Criando o blog</a>
-            </p>
-        </div>
+                <p>
+                    <a href="index.html">..</a>
+                </p>
+                <h2>2021</h2>
+                <p>
+                    <a href="diary/criando_blog.html">29/05/2021 ‒ Criando o blog</a>
+                </p>
+        </section>
     </body>
 </html>
