--- a/diary/criando_blog.html
+++ b/diary/criando_blog.html
@@ -2,15 +2,14 @@
     <head>
         <title>Bruno.</title>
         <link rel="stylesheet" href="../css/style.css">
-        <link rel="stylesheet" href="../css/grid/simple-grid.css">
     </head>
     <body>
-        <div class="container">
+        <section>
             <h1>Criando o blog</h3>
             <p>29 de maio de 2021</p>
             <p>Sempre quis criar um blog, porém, nunca realmente tive a pachorra.</p>
             <p>Hoje comecei a fazê-lo e espero não desistir deste projeto.</p>
             <p>Queria algo que eu tenha total controlo, por isso não uso algo como o blogger e faço as minhas próprias páginas.</p>
-        </div>
+        </section>
     </body>
 </html>
