--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <html>
     <head>
         <title>Bruno.</title>
-        <link rel="stylesheet" href="css/grid/simple-grid.css">
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <div id="home" class="container">
+        <section>
             <pre>
 ____
 (.   \
@@ -43,6 +42,6 @@ ____
                 <a href="https://renegade-x.com/profile/13556-bruni/">Renegade X Forums</a>
                 <br>
             </p>
-        </div>
+        </section>
     </body>
 </html>
