--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@ ____
  __/    (  . . )
 "'._.    '-.O.'
      '-.  \ "|\
-        '.,,/'.,,mrf
-            </pre>
+        '.,,/'.,,mrf</pre>
             <h1>Bruno.</h1>
             <p>Olá e bem-vindo(a) ao meu blog. Eu geralmente espio o mundo do código-aberto, jogos, música, e falo sobre os meus dias aqui, basicamente como se fosse um diário.</p>
 
