--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@ ____
                 <br>
                 <a href="">Youtube</a>
                 <br>-->
-                <a href="https://open.spotify.com/user/77szv7ymtz8jt1ft0q8iw7qe7">Spotify</a>
+                <a href="https://open.spotify.com/user/77szv7ymtz8jt1ft0q8iw7qe7" target="_blank">Spotify</a>
                 <br>
-                <a href="https://www.instagram.com/brunobits/">Instagram</a>
+                <a href="https://www.instagram.com/brunobits/" target="_blank">Instagram</a>
                 <br>
                 <!--<a href="">Discord</a>
                 <br>-->
-                <a href="https://steamcommunity.com/id/brunobits/">Steam</a>
+                <a href="https://steamcommunity.com/id/brunobits/" target="_blank">Steam</a>
                 <br>
-                <a href="https://renegade-x.com/profile/13556-bruni/">Renegade X Forums</a>
+                <a href="https://renegade-x.com/profile/13556-bruni/" target="_blank">Renegade X Forums</a>
                 <br>
             </p>
         </section>
