--- a/diary/criando_blog.html
+++ b/diary/criando_blog.html
@@ -7,9 +7,12 @@
         <section>
             <h1>Criando o blog</h3>
             <p>29 de maio de 2021</p>
-            <p>Sempre quis criar um blog, porém, nunca realmente tive a pachorra.</p>
+            <p>Sempre quis criar um blog, porém, tinha preguiça de começar um.</p>
             <p>Hoje comecei a fazê-lo e espero não desistir deste projeto.</p>
             <p>Queria algo que eu tenha total controlo, por isso não uso algo como o blogger e faço as minhas próprias páginas.</p>
+            <p>
+                <a href="../index.html">..</a>
+            </p>
         </section>
     </body>
 </html>
