--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ ____
 
             <h2>Diário</h2>
             <p>
-                <a href="diary/criando_blog.html">29/05/2021 ‒ Criando o blog</a>
+                <a href="diario/criando_blog.html">29/05/2021 ‒ Criando o blog</a>
             </p>
             <p>
                 <a href="arquivo.html">Arquivados</a>
