--- a/arquivo.html
+++ b/arquivo.html
@@ -11,7 +11,7 @@
                 </p>
                 <h2>2021</h2>
                 <p>
-                    <a href="diary/criando_blog.html">29/05/2021 ‒ Criando o blog</a>
+                    <a href="diario/criando_blog.html">29/05/2021 ‒ Criando o blog</a>
                 </p>
         </section>
     </body>
